--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,8 +32,13 @@
   </listener>-->
  <servlet-mapping>
     <servlet-name>default</servlet-name>
-    <url-pattern>*.js</url-pattern>
      <url-pattern>*.css</url-pattern>
+    <url-pattern>*.js</url-pattern>
+     <url-pattern>*.png</url-pattern>
+     <url-pattern>*.ttf</url-pattern>
+     <url-pattern>*.eot</url-pattern>
+     <url-pattern>*.woff</url-pattern>
+     <url-pattern>*.jpg</url-pattern>
   </servlet-mapping>
   <!-- 配置DispatcherServlet -->
   <servlet>
