--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,23 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.0.19</version>
+    </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+      </dependency>
+    <dependency>
+      <groupId>QRCode</groupId>
+      <artifactId>QRCode</artifactId>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/src/main/webapp/lib/QRCode.jar</systemPath>
+    </dependency>
   </dependencies>
 
 </project>
