--- a/pom.xml
+++ b/pom.xml
@@ -309,6 +309,11 @@
       <scope>system</scope>
       <systemPath>${project.basedir}/src/main/webapp/lib/QRCode.jar</systemPath>
     </dependency>
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.8.5</version>
+      </dependency>
   </dependencies>
 
 </project>
